<resources>
    <string name="app_name">BEComputer</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="txtLogin">Login</string>
    <string name="txtUsername">Username</string>
    <string name="txtProduct">Product</string>
    <string name="txtNoAccount">Don\'t have an account ?</string>
    <string name="txtSignup">Sign up</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="txtAddRecord">Add</string>
    <string name="txtRemoveRecord">Remove</string>
    <string name="txtRecordsNo">Total Records</string>
    <string name="txtName">Name</string>
    <string name="txtPrice">Price</string>
    <string name="txtFoodId">Food id</string>
    <string name="txtDeleteAll">Delete all</string>
    <string name="txtAllFood">All Food</string>

</resources>