<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    tools:context=".DatabaseActivity">

    <Button
        android:text="@string/txtAddRecord"
        android:id="@+id/btnAddRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/txtRemoveRecord"
        android:id="@+id/btnRemoveRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/txtRecordsNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:text="10"
        android:id="@+id/tvTotalRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp" />

</LinearLayout>